// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example component renders circular progress when loading 1`] = `
<div>
  <div
    id="sort_state"
  >
    null
  </div>
  <button
    onClick={[Function]}
  >
    Set sort
  </button>
  <WithStyles(ForwardRef(CircularProgress)) />
  <div
    id="investigation_data"
  >
    []
  </div>
  <div
    id="investigation_data_error"
  >
    null
  </div>
  <button
    onClick={[Function]}
  >
    Fetch data
  </button>
</div>
`;

exports[`Example component renders correctly 1`] = `
<div>
  <div
    id="sort_state"
  >
    null
  </div>
  <button
    onClick={[Function]}
  >
    Set sort
  </button>
  <div
    id="investigation_data"
  >
    []
  </div>
  <div
    id="investigation_data_error"
  >
    null
  </div>
  <button
    onClick={[Function]}
  >
    Fetch data
  </button>
</div>
`;
